--- a/components/modal/style/component.scss
+++ b/components/modal/style/component.scss
@@ -6,9 +6,14 @@ $zarmPrefixCls: za-popup;
   @include e(content) {
     background-color: #fff;
     min-width: 380px;
-    border-radius: 6px;
     overflow: hidden;
     box-shadow: 0 3px 10px 7px rgba(0, 0, 0, 0.15);
+  }
+
+  @include m(radius) {
+    @include e(content) {
+      border-radius: 6px;
+    }
   }
 
   .#{$zarmPrefixCls}--center {
