--- a/components/tooltip/style/index.scss
+++ b/components/tooltip/style/index.scss
@@ -1,1 +1,99 @@
-@import './component';
+@import 'mixins.scss';
+
+@include b(tooltip) {
+  display: inline-block;
+
+  @include e(inner) {
+    display: block;
+  }
+
+  @include e(wrapper) {
+    padding: var(--tooltip-padding-v) var(--tooltip-padding-h);
+    box-shadow: var(--box-shadow-dark);
+    border-radius: 4px;
+    font-size: var(--tooltip-font-size);
+    z-index: var(--zindex-tooltip);
+
+    &[x-placement^=right] {
+      margin-left: 10px;
+
+      @include arrow () {
+        left: -4px;
+        border-width: var(--tooltip-arrow-size) var(--tooltip-arrow-size) var(--tooltip-arrow-size) 0;
+        border-right-color: rgba(0, 0, 0, var(--opacity-tooltip));
+      }
+    }
+
+    &[x-placement^=top] {
+      margin-bottom: 10px;
+
+      @include arrow () {
+        bottom: -4px;
+        border-width: var(--tooltip-arrow-size) var(--tooltip-arrow-size) 0;
+        border-top-color: rgba(0, 0, 0, var(--opacity-tooltip));
+      }
+    }
+
+    &[x-placement^=bottom] {
+      margin-top: 10px;
+
+      @include arrow () {
+        top: -4px;
+        border-width: 0 var(--tooltip-arrow-size) var(--tooltip-arrow-size) var(--tooltip-arrow-size);
+        border-bottom-color: rgba(0, 0, 0, var(--opacity-tooltip));
+      }
+    }
+
+    &[x-placement^=left] {
+      margin-right: 10px;
+
+      @include arrow () {
+        right: -4px;
+        border-width: var(--tooltip-arrow-size) 0 var(--tooltip-arrow-size) var(--tooltip-arrow-size);
+        border-left-color: rgba(0, 0, 0, var(--opacity-tooltip));
+      }
+    }
+  }
+
+  @include m(light) {
+    background-color: var(--tooltip-light-background-color);
+    color: rgba(0, 0, 0, var(--opacity-tooltip));
+
+    &[x-placement^=right] {
+      @include arrow () {
+        border-right-color: var(--tooltip-light-background-color);
+      }
+    }
+
+    &[x-placement^=top] {
+      @include arrow () {
+        border-top-color: var(--tooltip-light-background-color);
+      }
+    }
+
+    &[x-placement^=bottom] {
+      @include arrow () {
+        border-bottom-color: var(--tooltip-light-background-color);
+      }
+    }
+
+    &[x-placement^=left] {
+      @include arrow () {
+        border-left-color: var(--tooltip-light-background-color);
+      }
+    }
+  }
+
+  @include m(dark) {
+    background-color: var(--tooltip-dark-background-color);
+    color: var(--color-text-inverse);
+  }
+
+  @include e(arrow) {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+  }
+}
