--- a/components/style/components.scss
+++ b/components/style/components.scss
@@ -28,6 +28,7 @@
 @import '../select/style';
 @import '../slider/style';
 @import '../step/style';
+@import '../steps/style';
 @import '../swipe/style';
 @import '../switch/style';
 @import '../tab/style';
