--- a/components/style/themes/default.scss
+++ b/components/style/themes/default.scss
@@ -99,6 +99,7 @@ $base-zindex-mask:         1000 !default;
 $base-zindex-modal:        1100 !default;
 $base-zindex-loading:      1 !default;
 $base-zindex-message:      1300 !default;
+$base-zindex-notification: 1400 !default;
 
 $base-modal-radius:        6px !default;
 $base-modal-round:         20px !default;
