feat: make code subject to commit rules

--- a/site/styles/pages/notification.scss
+++ b/site/styles/pages/notification.scss
@@ -1,4 +1,5 @@
-.notification-page, .zw-notification__action-area{
+.notification-page,
+.zw-notification__action-area {
   .zw-button {
     margin-right: 8px;
   }
