chore: update tabs scss

--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -215,5 +215,10 @@
   --icon-font-size-md: 24px;
   --icon-font-size-lg: 32px;
   --icon-theme-default: var(--color-text);
+
+  // Tabs
+  --tabs-font-size-sm: 12px;
+  --tabs-font-size-md: 14px;
+  --tabs-font-size-lg: 16px;
 }
 
