--- a/components/tabs/style/mixin.scss
+++ b/components/tabs/style/mixin.scss
@@ -1,12 +1,12 @@
 @mixin tabs-size($font-size) {
+  font-size: $font-size;
+
+  @include b(tabs-header-item-icon) {
     font-size: $font-size;
-    
-    @include b(tabs-header-item-icon) {
-      font-size: $font-size;
-      display: inline-block;
-      color: #BCBCBC;
-      margin-left: 8px;
-    }
+    display: inline-block;
+    color: #bcbcbc;
+    margin-left: 8px;
+  }
 }
 
 @mixin tabs-header-style() {
@@ -23,36 +23,36 @@
       cursor: pointer;
       line-height: normal;
       color: #616161;
-  
+
       @include m(disabled) {
-        color: #BCBCBC;
+        color: #bcbcbc;
         cursor: not-allowed;
       }
-  
+
       @include m(active) {
-        background: #FFF;
-        color: #00BC70;
+        background: #fff;
+        color: #00bc70;
       }
 
       @include m(sm) {
         @include tabs-size(
           var(--tabs-font-size-sm),
-        )
+        );
       }
 
       @include m(md) {
         @include tabs-size(
           var(--tabs-font-size-md),
-        )
+        );
       }
 
       @include m(lg) {
         @include tabs-size(
           var(--tabs-font-size-lg),
-        )
+        );
       }
     }
-  
+
     &::-webkit-scrollbar {
       display: none;
     }
@@ -67,7 +67,7 @@
 
 @mixin tabs-body-style {
   @include clearfix;
-  
+
   position: relative;
   transition: height .3s;
 
